--- a/.github/workflows/automate.yml
+++ b/.github/workflows/automate.yml
@@ -3,7 +3,7 @@ name: Automated Pull Request
 on:
   push:
     branches:
-      - version_update
+      - version_update_1
 
 jobs:
   create-pull-request:
@@ -21,4 +21,4 @@ jobs:
         title: Automated Pull Request
         body: This pull request was automatically generated.
         branch: master
-        base: version_update
+        base: version_update_1
