--- a/.github/workflows/automate.yml
+++ b/.github/workflows/automate.yml
@@ -1,25 +1,48 @@
-name: Automated Pull Request
+# name: Automated Pull Request
 
+# on:
+#   push:
+#     branches:
+#       - version_update_2
+
+# jobs:
+#   create-pull-request:
+#     runs-on: ubuntu-latest
+    
+#     steps:
+#     - name: Checkout code
+#       uses: actions/checkout@v3
+    
+#     - name: Create pull request
+#       uses: karanshukla430/HouseMarketPalce123@v2.1.2
+#       with:
+#         token: ${{ secrets.GITHUB_TOKEN }}
+#         commit-message: Automated Pull Request
+#         title: Automated Pull Request
+#         body: This pull request was automatically generated.
+#         branch: master
+#         base: version_update_2
+
+
+name: Automatically create / update pull request
+
+# run this workflow only on new feature branches, not when they're merged to main
 on:
   push:
-    branches:
-      - version_update_2
+    branches-ignore:
+      - "main"
 
 jobs:
-  create-pull-request:
+  create_pr_repo_sync:
     runs-on: ubuntu-latest
-    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-    
-    - name: Create pull request
-      uses: karanshukla430/HouseMarketPalce123@v2.1.2
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        commit-message: Automated Pull Request
-        title: Automated Pull Request
-        body: This pull request was automatically generated.
-        branch: master
-        base: version_update_2
-
+      - uses: actions/checkout@v3
+      - name: Create pull request
+        id: open-pr
+        uses: karanshukla430/HouseMarketPalce123@v2
+        with:
+          destination_branch: "master"
+          pr_title: "feat: PLACEHOLDER TITLE"
+          # pr_template: ".github/PULL_REQUEST_TEMPLATE.md"
+          pr_reviewer: "paigen11"
+          pr_draft: true
