--- a/.github/workflows/automate.yml
+++ b/.github/workflows/automate.yml
@@ -1,11 +1,11 @@
 # name: Automated Pull Request
 
-# on:
-#   push:
-#     branches:
-#       - version_update_2
+on:
+  push:
+    branches:
+      - version_update_2
 
-# jobs:
+jobs:
 #   create-pull-request:
 #     runs-on: ubuntu-latest
     
@@ -24,25 +24,17 @@
 #         base: version_update_2
 
 
-name: Automatically create / update pull request
-
-# run this workflow only on new feature branches, not when they're merged to main
-on:
-  push:
-    branches-ignore:
-      - "main"
-
-jobs:
-  create_pr_repo_sync:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Create pull request
-        id: open-pr
+        pull-request:
+      needs: regression-tests
+      name: Github Pull Request
+      runs-on: ubuntu-latest
+      steps:
+      - uses: actions/checkout@v2
+      - name: pull-request
         uses: karanshukla430/HouseMarketPalce123@v2
         with:
           destination_branch: "master"
-          pr_title: "feat: PLACEHOLDER TITLE"
-          # pr_template: ".github/PULL_REQUEST_TEMPLATE.md"
-          pr_reviewer: "paigen11"
-          pr_draft: true
+          pr_title: "Pulling ${{ github.ref }} into master"
+          pr_body: "👑 *An automated PR test*"
+          pr_reviewer: "Kev"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
