--- a/.github/workflows/automate.yml
+++ b/.github/workflows/automate.yml
@@ -6,32 +6,32 @@ on:
       - version_update_2
 
 jobs:
-#   create-pull-request:
-#     runs-on: ubuntu-latest
+  create-pull-request:
+    runs-on: ubuntu-latest
     
-#     steps:
-#     - name: Checkout code
-#       uses: actions/checkout@v3
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
     
-#     - name: Create pull request
-#       uses: karanshukla430/HouseMarketPalce123@v2.1.2
-#       with:
-#         token: ${{ secrets.GITHUB_TOKEN }}
-#         commit-message: Automated Pull Request
-#         title: Automated Pull Request
-#         body: This pull request was automatically generated.
-#         branch: master
-#         base: version_update_2
+    - name: Create pull request
+      uses: karanshukla430/HouseMarketPalce123@v2
+      # with:
+      #   token: ${{ secrets.GITHUB_TOKEN }}
+      #   commit-message: Automated Pull Request
+      #   title: Automated Pull Request
+      #   body: This pull request was automatically generated.
+      #   branch: master
+      #   base: version_update_2
 
 
-        pull-request:
-      needs: regression-tests
-      name: Github Pull Request
-      runs-on: ubuntu-latest
-      steps:
-      - uses: actions/checkout@v2
-      - name: pull-request
-        uses: karanshukla430/HouseMarketPalce123@v2
+      #   pull-request:
+      # needs: regression-tests
+      # name: Github Pull Request
+      # runs-on: ubuntu-latest
+      # steps:
+      # - uses: actions/checkout@v2
+      # - name: pull-request
+      #   uses: karanshukla430/HouseMarketPalce123@v2
         with:
           destination_branch: "master"
           pr_title: "Pulling ${{ github.ref }} into master"
