--- a/.github/workflows/automate.yml
+++ b/.github/workflows/automate.yml
@@ -12,28 +12,13 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+      
     - name: Create pull request
       uses: karanshukla430/HouseMarketPalce123@v2
-      # with:
-      #   token: ${{ secrets.GITHUB_TOKEN }}
-      #   commit-message: Automated Pull Request
-      #   title: Automated Pull Request
-      #   body: This pull request was automatically generated.
-      #   branch: master
-      #   base: version_update_2
-
-
-      #   pull-request:
-      # needs: regression-tests
-      # name: Github Pull Request
-      # runs-on: ubuntu-latest
-      # steps:
-      # - uses: actions/checkout@v2
-      # - name: pull-request
-      #   uses: karanshukla430/HouseMarketPalce123@v2
-        with:
-          destination_branch: "master"
-          pr_title: "Pulling ${{ github.ref }} into master"
-          pr_body: "👑 *An automated PR test*"
-          pr_reviewer: "Kev"
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        commit-message: Automated Pull Request
+        title: Automated Pull Request
+        body: This pull request was automatically generated.
+        branch: version_update_2
+        base: master
